# condash-tauri

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  mkdocs.yml  package.json  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/condash-mutations/: Cargo.toml
crates/condash-mutations/src/: create_item.rs  files.rs  lib.rs  steps.rs
crates/condash-mutations/tools/: py_driver.py
crates/condash-parser/: Cargo.toml
crates/condash-parser/src/: collect.rs  deliverables.rs  fingerprint.rs  knowledge.rs  lib.rs  note_kind.rs  readme.rs  regexes.rs  sections.rs  tree.rs
crates/condash-parser/tools/: py_driver.py
crates/condash-render/: Cargo.toml
crates/condash-render/src/: git_render.rs  icons.rs  lib.rs  note_render.rs  templating.rs
crates/condash-render/templates/: _macros.html.j2  card.html.j2  history.html.j2  history_search_results.html.j2  knowledge_card.html.j2  knowledge_group.html.j2  knowledge_tree.html.j2
crates/condash-state/: Cargo.toml
crates/condash-state/src/: cache.rs  ctx.rs  lib.rs  search.rs
crates/condash-state/src/git/: fingerprint.rs  mod.rs  scan.rs
docs/: CNAME  commands.md  conception-convention.md  getting-started.md  index.md  install.md  legal.md  reference.md  skill.md
docs/assets/stylesheets/: extra.css
docs/explanation/: index.md  internals.md  why-markdown.md
docs/get-started/: first-launch.md  index.md  install.md  releases.md
docs/guides/: configure-conception-path.md  deliverables.md  index.md  install-desktop.md  knowledge-tree.md  multi-machine.md  repositories-and-open-with.md  search.md  skill-extensions.md  terminal.md  wikilinks.md
docs/reference/: cli.md  conception-convention.md  config.md  env.md  http-api.md  index.md  inline-runner.md  mutations.md  readme-format.md  shortcuts.md  skill.md
docs/tutorials/: daily-loop.md  first-project.md  first-run.md  index.md
examples/conception-demo/: README.md
examples/conception-demo/config/: preferences.yml  repositories.yml
examples/conception-demo/knowledge/: conventions.md  index.md
examples/conception-demo/knowledge/internal/: helio-web.md  helio.md  index.md
examples/conception-demo/knowledge/topics/: index.md  performance.md  releases.md
examples/conception-demo/projects/: index.md
examples/conception-demo/projects/2026-03/: index.md
examples/conception-demo/projects/2026-03/2026-03-20-helio-0.3-release/: README.md
examples/conception-demo/projects/2026-03/2026-03-25-docs-site-404s/: README.md
examples/conception-demo/projects/2026-04/: index.md
examples/conception-demo/projects/2026-04/2026-04-02-fuzzy-search-v2/: README.md
examples/conception-demo/projects/2026-04/2026-04-08-search-crash-large-logs/: README.md
examples/conception-demo/projects/2026-04/2026-04-10-plugin-api-proposal/: README.md
examples/conception-demo/projects/2026-04/2026-04-12-cli-config-migration/: README.md
examples/conception-demo/projects/2026-04/2026-04-15-json-export/: README.md
examples/conception-starter/: README.md
examples/conception-starter/documents/2026-04-15-first-document/: README.md
examples/conception-starter/incidents/2026-04-15-first-incident/: README.md
examples/conception-starter/projects/2026-04-15-first-project/: README.md
examples/skills/conception-items/: SKILL.md
frontend/: dashboard.html
frontend/src/css/: cards.css  code-tab.css  main.css  modals.css  terminal.css  themes.css
frontend/src/css/cards/: about-modal.css  badges.css  card.css  config-modal.css  focus-flash.css  header-actions.css  history.css  knowledge.css  misc.css  notes-block.css  reset.css  search-toolbar.css  setup-banner.css  shell.css  stale.css  steps.css  tabs-primary.css  tabs.css  terminal-pane.css  topbar.css
frontend/src/css/code-tab/: deliverables.css  flat-view.css  headings.css  runner.css
frontend/src/css/modals/: note-actions.css  note-body.css  note-misc.css  note-mode-toggle.css  note-preview.css  note-search.css
frontend/src/js/: cm6-init.js  cm6-mount.js  dashboard-main.js  entry.js  pdf-viewer.js
frontend/src/js/sections/: about-modal.js  action-dispatch.js  cm6-mount.js  cm6-theme-sync.js  config-modal.js  dom-swap.js  git-actions.js  htmx-state-preserve.js  in-note-search.js  local-subtree-reload.js  new-item-modal.js  note-mode.js  note-preview.js  note-reconcile.js  refresh-all.js  reload-guards.js  reload-hooks.js  runner-viewers.js  search-filter.js  shadow-cache.js  sse.js  stale-poll.js  steps.js  tab-drag.js  terminal.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: assets.rs  config.rs  env_hygiene.rs  events.rs  launcher.rs  lib.rs  main.rs  openers.rs  paths.rs  pty.rs  runners.rs  server.rs  user_config.rs
src-tauri/src/server/: config_surface.rs  events.rs  items.rs  mod.rs  notes.rs  openers.rs  rescan.rs  runners.rs  shell.rs  steps.rs  terminal.rs
src-tauri/tests/: configuration_yml.rs  events_routes.rs  file_mutation_routes.rs  mutation_routes.rs  runner_routes.rs  term_ws.rs
src/condash/: __init__.py  app.py  cache.py  cli.py  clipboard.py  config.py  context.py  core.py  desktop.py  events.py  git_scan.py  legacy.py  mutations.py  openers.py  parser.py  paths.py  pty.py  render.py  runners.py  search.py  state.py  templating.py  wikilinks.py
src/condash/assets/: dashboard.html
src/condash/assets/src/css/: modals.css  (+2 more)
src/condash/routes/: __init__.py  _common.py  clipboard.py  config_.py  files.py  fragments.py  items.py  notes.py  openers.py  runners.py  static.py  steps.py  terminals.py  updates.py
tests/: conftest.py  test_app_smoke.py  test_cli_smoke.py  test_events.py  test_focus_safe_swap.py  test_fragment_endpoint.py  test_node_fingerprints.py  test_onclick_window_exports.py  test_repositories_yaml.py  test_runner_render.py  test_runners.py  test_search.py  test_status_enum.py  test_workspace_cache.py  test_workspace_scan.py
tests/e2e/: conftest.py  test_dashboard_smoke.py
tests/smoke/: package.json  playwright.config.mjs  smoke.spec.mjs
tools/: codemirror-entry.js
(+7 files in other folders)
