[package]
name = "condash"
version = "0.20.1"
description = "Conception dashboard — Tauri port (Phase 0 scaffold)"
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "condash"

[lib]
name = "condash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "condash-serve"
path = "src/bin/condash_serve.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1"

condash-parser = { path = "../crates/condash-parser" }
condash-state = { path = "../crates/condash-state" }
condash-render = { path = "../crates/condash-render" }

[lints]
workspace = true
