[package]
name = "condash"
version = "0.20.1"
description = "Conception dashboard — Tauri port (Phase 0 scaffold)"
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "condash"

[lib]
name = "condash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "condash-serve"
path = "src/bin/condash_serve.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1"
once_cell = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

condash-parser = { path = "../crates/condash-parser" }
condash-state = { path = "../crates/condash-state" }
condash-render = { path = "../crates/condash-render" }
condash-mutations = { path = "../crates/condash-mutations" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
