[package]
name = "condash"
version = "1.0.2"
description = "Conception dashboard — Tauri port (Phase 0 scaffold)"
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "condash"

[lib]
name = "condash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "condash-serve"
path = "src/bin/condash_serve.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
axum = { version = "0.8", features = ["multipart", "ws"] }
portable-pty = "0.8"
rand = "0.8"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
notify = "8"
futures-util = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
once_cell = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rfd = "0.15"

condash-parser = { path = "../crates/condash-parser" }
condash-state = { path = "../crates/condash-state" }
condash-render = { path = "../crates/condash-render" }
condash-mutations = { path = "../crates/condash-mutations" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"

[lints]
workspace = true
