[package]
name = "condash-mutations"
version = "0.1.0"
description = "README.md write-side mutations for condash. Rust port of mutations.py step helpers."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
condash-parser = { path = "../condash-parser" }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
# serde_json + tempfile carry into the default feature set (not
# dev-dependencies) so the `mutation-diff` dev-binary can link them.
# Same pattern as condash-parser's parser-diff bin.
serde_json = "1"
tempfile = "3"

[[bin]]
name = "mutation-diff"
path = "src/bin/mutation_diff.rs"

[lints]
workspace = true
