[package]
name = "condash-mutations"
version = "0.1.0"
description = "README.md write-side mutations for condash."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[dependencies]
condash-parser = { path = "../condash-parser" }
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
