[package]
name = "condash-parser"
version = "0.1.0"
description = "Parser for conception item READMEs and the knowledge tree. Rust port of condash/src/condash/parser.py."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
md-5 = "0.10"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

# The diff harness needs JSON at runtime too; it's fine to carry serde_json
# in the default feature set since this crate is only consumed locally.
[dependencies.serde_json]
version = "1"

[[bin]]
name = "parser-diff"
path = "src/bin/parser_diff.rs"

[lints]
workspace = true
