[package]
name = "condash-parser"
version = "0.1.0"
description = "Parser for conception item READMEs and the knowledge tree."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
md-5 = "0.10"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
