[package]
name = "condash-render"
version = "0.1.0"
description = "HTML rendering for the conception dashboard."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
condash-parser = { path = "../condash-parser" }
condash-state  = { path = "../condash-state" }
minijinja = { version = "2", features = ["loader", "builtins"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
