[package]
name = "condash-state"
version = "0.1.0"
description = "Runtime context + workspace cache for condash."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
condash-parser = { path = "../condash-parser" }
md-5 = "0.10"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
